# codingdojo

./: .editorconfig  .gitignore  build.sbt
.github/workflows/: ccpp.yml  cpp.yml  java.yml  rust.yaml  scala.yml
code/cpp/: CMakeLists.txt
code/cpp/src/: CMakeLists.txt
code/cpp/src/leetcode/: CMakeLists.txt
code/cpp/src/leetcode/add-two-numbers/: AddTwoNumbers.cpp  AddTwoNumbers.h
code/cpp/src/leetcode/easy/add-two-numbers/: AddTwoNumbers.h
code/cpp/src/leetcode/easy/find-numbers-with-even-number-of-digits/: FindNumbersWithEvenNumberOfDigits.cpp  FindNumbersWithEvenNumberOfDigits.h
code/cpp/src/leetcode/easy/longest-palindromic-substring/: LongestPalindromicSubstring.h
code/cpp/src/leetcode/easy/zig-zag-conversion/: ZigZagConversion.cpp
code/cpp/src/leetcode/longest-palindromic-substring/: LongestPalindromicSubstring.cpp
code/cpp/src/leetcode/longest-substring-without-repeating-characters/: LongestSubstringWithoutRepeatingCharacters.cpp
code/cpp/src/leetcode/medium/minimum-number-of-steps-to-make-two-strings-anagram/: MinimumNumberOfStepsToMakeTwoStringsAnagram.cpp  MinimumNumberOfStepsToMakeTwoStringsAnagram.h
code/cpp/src/leetcode/two-sum/: TwoSum.h
code/cpp/src/leetcode/zig-zag-conversion/: ZigZagConversion.cpp  ZigZagConversion.h
code/cpp/test/: CMakeLists.txt  CMakeLists.txt.in
code/cpp/test/daily-coding-problem/: CMakeLists.txt
code/cpp/test/daily-coding-problem/element_index_in_sorted_array/: ElementIndexInSortedArrayTest.cpp
code/cpp/test/leetcode/: CMakeLists.txt
code/cpp/test/leetcode/easy/add-two-numbers/: AddTwoNumbersTest.cpp
code/cpp/test/leetcode/easy/find-numbers-with-even-number-of-digits/: FindNumbersWithEvenNumberOfDigitsTest.cpp  FindNumbersWithEvenNumberOfDigitsTest.h
code/cpp/test/leetcode/easy/longest-palindromic-substring/: LongestPalindromicSubstringTest.h
code/cpp/test/leetcode/easy/longest-substring-without-repeating-characters/: LongestSubstringWithoutRepeatingCharactersTest.cpp
code/cpp/test/leetcode/easy/zig-zag-conversion/: ZigZagConversionTest.cpp  ZigZagConversionTest.h
code/cpp/test/leetcode/longest-palindromic-substring/: LongestPalindromicSubstringTest.cpp
code/cpp/test/leetcode/medium/minimum-number-of-steps-to-make-two-strings-anagram/: MinimumNumberOfStepsToMakeTwoStringsAnagramTest.cpp  MinimumNumberOfStepsToMakeTwoStringsAnagramTest.h
code/cpp/test/leetcode/two-sum/: TwoSumTest.cpp  TwoSumTest.h
code/cpp/test/leetcode/zig-zag-conversion/: ZigZagConversionTest.cpp
code/java/: build.gradle
code/java/gradle/wrapper/: gradle-wrapper.properties
code/java/main/cracking_the_coding_interview/: CheckIfStringIsARotationOfAnotherString.java  PrintAllPermutationsOfAString.java  ShortestPathToReachCellGrid.java
code/java/main/daily_coding_problem/: ProductOfArrayExceptValueAtIndexI.java  TwoNumbersFromListAddToK.java
code/java/main/interview/: MergeSort.java  MostCommonArrayElement.java
code/java/main/leet_code/: TreeNode.java
code/java/test/cracking_the_coding_interview/: AllCharactersInStringAreUniqueWithoutDataStructuresTest.java  CheckIfStringIsARotationOfAnotherStringTest.java  MinimumNumberOfEditsToConvertStringToStringTest.java  PermutationsOfAStringInsideStringTest.java  PrintAllPermutationsOfAStringTest.java  RotateImageMatrixTest.java  ShortestPathToReachCellGridTest.java  StringIsOneCharacterAwayTest.java
code/java/test/daily_coding_problem/: FirstMissingPositiveIntegerTest.java  ProductOfArrayExceptValueAtIndexITest.java  SerializeBinaryTreeTest.java  TwoNumbersFromListAddToKTest.java
code/java/test/interview/: ArrangeNumbersArrayToGiveTheBiggestNumberTest.java  FirstNonRepeatingCharacterTest.java  MostCommonArrayElementTest.java  PushElementToArrayWhenNumberEncounteredTest.java  QuickSortTest.java
code/rust/: Cargo.toml
code/rust/leetcode/easy/: matching_binary_trees.rs  mod.rs  palindromic_number.rs
code/rust/src/: main.rs
code/scala/: build.sbt
src/main/c/leetcode/: SearchInsertPosition.cpp
src/main/cpp/: CMakeLists.txt  Project.xml  main.cpp
src/main/cpp/element_index_in_sorted_array/: ElementIndexInSortedArray.cpp
src/main/cpp/reverse_only_letters/: ReverseOnlyLetters.cpp
src/main/cpp/src/: CMakeLists.txt  main.cpp
src/main/cpp/src/daily-coding-problem/: CMakeLists.txt
src/main/cpp/src/daily-coding-problem/reverse_only_letters/: ReverseOnlyLetters.h
src/main/cpp/src/leetcode/: CMakeLists.txt
src/main/cpp/src/leetcode/add-two-numbers/: AddTwoNumbers.h  AddTwoNumbersTest.cpp
src/main/cpp/src/leetcode/longest-palindromic-substring/: LongestPalindromicSubstring.cpp  LongestPalindromicSubstring.h
src/main/cpp/src/leetcode/longest-substring-without-repeating-characters/: LongestSubstringWithoutRepeatingCharacters.cpp  LongestSubstringWithoutRepeatingCharacters.h
src/main/cpp/src/leetcode/two-sum/: TwoSum.cpp  TwoSum.h
src/main/cpp/src/leetcode/zig-zag-conversion/: ZigZagConversion.cpp
src/main/cpp/test/: CMakeLists.txt  main.cpp
src/main/cpp/test/daily-coding-problem/: CMakeLists.txt
src/main/cpp/test/daily-coding-problem/element_index_in_sorted_array/: ElementIndexInSortedArrayTest.cpp  ElementIndexInSortedArrayTest.h
src/main/cpp/test/leetcode/: CMakeLists.txt
src/main/cpp/test/leetcode/add-two-numbers/: AddTwoNumbersTest.cpp  AddTwoNumbersTest.h
src/main/cpp/test/leetcode/longest-palindromic-substring/: LongestPalindromicSubstringTest.cpp  LongestPalindromicSubstringTest.h
src/main/cpp/test/leetcode/longest-substring-without-repeating-characters/: LongestSubstringtWithoutRepeatingCharactersTest.cpp  LongestSubstringtWithoutRepeatingCharactersTest.h
src/main/cpp/test/leetcode/two-sum/: TwoSumTest.cpp  TwoSumTest.h
src/main/cpp/test/leetcode/zig-zag-conversion/: ZigZagConversionTest.cpp
src/main/scala/cracking_the_coding_interview/: StringIsOneCharacterAway.java
src/main/scala/daily_coding_problems/: FirstMissingPositiveInteger.java  ProductOfArrayExceptValueAtIndexI.java  SerializeBinaryTree.java  TwoNumbersFromListAddToK.java
src/main/scala/interview/: ArrangeNumbersArrayToGiveTheBiggestNumber.java  QuickSort.java  (+2 more)
(+291 files in other folders)
